codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__pnpm_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 1375
expression: rendered
---
╭────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ✨ Update available! 0.155.1 -> 9.9.9                                                                      │
│ Run sh -c 'curl -fsSL                                                                                      │
│ https://raw.githubusercontent.com/ModelCloud/LocalDex/main/scripts/install/install-localdex.sh | sh' to    │
│ update.                                                                                                    │
│                                                                                                            │
│ See full release notes:                                                                                    │
│ https://github.com/ModelCloud/LocalDex/releases                                                            │
╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
