codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__standalone_windows_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 1366
expression: rendered
---
╭────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ✨ Update available! 0.155.1 -> 9.9.9                                                                      │
│ Run powershell -NoProfile -Command "throw 'LocalDex releases currently support Linux x86_64 only.'" to     │
│ update.                                                                                                    │
│                                                                                                            │
│ See full release notes:                                                                                    │
│ https://github.com/ModelCloud/LocalDex/releases                                                            │
╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
